--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,11 +1,22 @@
 @import "http://fonts.googleapis.com/css?family=Oswald:400,700";
+@import "http://fonts.googleapis.com/css?family=Shadows+Into+Light+Two";
 $font-family: 'Oswald', sans-serif;
+$handwriting: 'Shadows Into Light Two', cursive; 
+
+$pink: #FF088D; 
 
 @mixin transition($transition) {
   -webkit-transition: $transition;
   -moz-transition: $transition;
   -o-transition: $transition;
   transition: $transition;
+}
+
+@mixin transform-transition($duration) {
+  -webkit-transition: -webkit-transform $duration;
+  -moz-transition: transform $duration, -ms-transform $duration;
+  -o-transition: transform $duration, -ms-transform $duration;
+  -transition: transform $duration;
 }
 
 @mixin translate($x, $y) {
@@ -51,22 +62,71 @@ body {
   width: 40%;
   float: left;
   text-align: right;
-  >span {
-    float: left;
-    @include transition(all 0.4s);
+  position: relative;
+
+  #iChar.surprise {
+    position: relative;
   }
-  .char1 {
-    width: 34%;
+
+  .char {
+    float: right;
+    text-align: right;
+
+    >span {
+      float: left;
+      @include transition(all 0.4s);
+    }
+    .char1 {
+      width: 34%;
+    }
+
+    .link1, .link2, .link3 {
+      font-family: $handwriting;
+      font-size: 36px;
+      position: absolute;
+    }
+
+    .link1 {
+      top: 65%;
+      left: 8%;
+      @include rotate(90deg, 50% 50% 0);
+    }
+
+    .link2 {
+      top: 25%;
+      left: 42%;
+    }
+
+    .link3 {
+      top: 71.5%;
+      left: 65%;
+    }
+
+    .char2.hidden, .link2.hidden {
+      visibility: hidden;
+      @include transition(none);
+    }
   }
-  >span:hover {
-    @include translate(0, -50px);
+
+  .char:hover {
+    .link1, .link2, .link3 {
+      z-index: 1000;
+    }
+    .link1:hover, .link2:hover, .link3:hover {
+      color: $pink;
+      cursor: pointer;
+    }
+    >span {
+      @include translate(0, -53px);
+    }
+    .char1{
+      @include rotate(30deg, 70% 30%);
+    }
+    .char2{
+      @include scale(1, 0.75, 0, 60px);
+    }
   }
-  .char1:hover {
-    @include rotate(30deg, 70% 30%);
-  }
-  .char2:hover {
-    @include scale(1, 0.75, 0, 60px);
-  }
+  
 }
 
 #lastname {
@@ -81,10 +141,11 @@ body {
   >div:first-child {
     opacity: 1.0;
     width: 100%;
+    height: 600px;
   }
 
   >div:last-child {
-    color:magenta;
+    color: $pink;
     height: 0px;
     opacity: 0;
     float: left;
@@ -104,6 +165,7 @@ body {
   &:hover {
     >div:first-child {
       opacity: 0;
+      height: 0px;
     }
     >div:last-child {
       opacity: 1.0;
@@ -113,5 +175,73 @@ body {
   }
 }
 
+#content-wrapper {
+  position: relative;
+  height: 600px;
+  width: 600px;
+  top: 75px;
+  left: 600px;
+  @include transition(all 0.5s);
+}
 
+#content-wrapper.off-screen {
+  @include translate(0, 1000px);  
+}
 
+#content-wrapper.hidden {
+  visibility: hidden;
+  height: 0;
+  overflow: hidden;
+}
+
+.content {
+  position: absolute;
+  top: 0;
+  background-color: #fdfdfd;
+  border-radius: 10px;
+  border: 2px #ddd solid;
+  box-shadow: -1px -1px 5px #ddd;
+  padding: 20px; 
+  text-align: left;
+  height: 100%;
+  width: 100%;
+  @include transition(all 0.3s);
+
+  .close {
+    position: absolute;
+    font-size: 32px;
+    top: 5px;
+    left: 600px;
+    color: #aaa;
+  }
+
+  .close:hover {
+    color: #444;
+    cursor: pointer;
+  }
+
+  h1 {
+    font-size: 32px;
+    color: $pink;
+  }
+
+  .desc {
+    font-size: 16px;
+    font-weight: normal;
+    color: #222;
+  }
+}
+
+.content.top {
+  @include rotate(-1deg, 50% 50%);
+  z-index: 1000;
+}
+
+.content.bottom {
+  @include rotate(1deg, 50% 50%);
+}
+
+svg {
+  position: absolute !important;
+  left: 0;
+}
