--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -65,7 +65,7 @@ body {
   text-align: right;
   position: relative;
 
-  #iChar.surprise {
+  #iChar {
     position: relative;
   }
 
@@ -95,7 +95,7 @@ body {
 
     .link2 {
       top: 25%;
-      left: 42%;
+      left: 32%;
     }
 
     .link3 {
